Fix flickering animations in StackList on Safari

--- a/features/about/components/StackItem.module.scss
+++ b/features/about/components/StackItem.module.scss
@@ -8,9 +8,8 @@ $stackItemBackground: #100029;
   flex-direction: column;
   align-items: center;
   gap: 0.2rem;
-  transition: all 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out;
   min-width: 85px;
-  //min-height: 100px;
   box-sizing: border-box;
   user-select: none;
   font-size: 0.9rem;
